# llmsurgery

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  ant.html  ant.html.md  index.html  index.html.md  oai.html  oai.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
llmsurgery/: _modidx.py  ant.py  antskill.py  compact.py  core.py  dialog.py  dlgskill.py  hist.py  ipynb.py  oai.py
llmsurgery/data/ant/: fork.jsonl  source.jsonl
llmsurgery/data/ant/project/.claude/skills/ant-fixture/: SKILL.md
llmsurgery/data/oai/: fork.jsonl  source.jsonl
nbs/: 00_dialog.ipynb  01_ipynb.ipynb  02_hist.ipynb  03_ant.ipynb  04_oai.ipynb  05_compact.ipynb  05_dlgskill.ipynb  index.ipynb  nbdev.yml
