[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "llmsurgery"
dynamic = ["version"]
description = "LLM Surgery"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "info@fast.ai"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['nbformat', 'fastcore>=2.1.3', 'python-fastllm>=0.0.28', 'json5', 'claude-agent-sdk']

[project.optional-dependencies]
dev = ['exhash']

[project.urls]
Repository = "https://github.com/AnswerDotAI/llmsurgery"
Documentation = "https://AnswerDotAI.github.io/llmsurgery/"

[project.entry-points.nbdev]
llmsurgery = "llmsurgery._modidx:d"

[project.entry-points.pyskills]
"llmsurgery.dlgskill" = "llmsurgery.dlgskill"
"llmsurgery.antskill" = "llmsurgery.antskill"

[tool.setuptools.dynamic]
version = {attr = "llmsurgery.__version__"}

[tool.setuptools.packages.find]
include = ["llmsurgery"]

[tool.nbdev]
allowed_metadata_keys = ['solveit']
allowed_cell_metadata_keys = ['solveit_ai']

[tool.chkstyle]
skip_paths = ["_modidx.py"]
